<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="#FFA500"
    android:padding="@dimen/space_10" >

    <TextView
        android:id="@+id/header_publish_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:padding="@dimen/space_5"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textColor="@color/pub_cancel_selector"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:id="@+id/header_publish_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/publish_question"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_20" />

    <TextView
        android:id="@+id/header_publish_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:textStyle="bold"
        android:padding="@dimen/space_5"
        android:text="@string/submit"
        android:textColor="@color/pub_submit_selector"
        android:textSize="@dimen/text_size_15" />

</RelativeLayout>