<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_bg"
    android:orientation="vertical" >

    <include layout="@layout/title_bar_activity" />

    <LinearLayout
        android:id="@+id/question_pub_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#97CBFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/space_10" >

        <TextView
            android:id="@+id/question_pub_title_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/question_pub_left"
            android:textColor="@color/question_title_nor"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/question_pub_title_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/question_pub_center"
            android:textColor="@color/question_title_nor"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/question_pub_title_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/question_pub_right"
            android:textColor="@color/question_title_nor"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/question_pub_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>