<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_bg" >

    <android.support.v4.view.ViewPager
        android:id="@+id/start_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/start_dot_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_bottom_btn"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/start_bottom_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/space_10"
        android:orientation="horizontal" >

        <!-- 半透明无边框圆角按钮 -->

        <Button
            android:id="@+id/start_login_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_5"
            android:layout_marginRight="@dimen/space_5"
            android:layout_weight="1"
            android:background="@drawable/trans_round_btn_selector"
            android:contentDescription="@string/iv_cont_des_string"
            android:gravity="center"
            android:text="@string/start_login"
            android:textColor="#82D900"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_register_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_5"
            android:layout_marginStart="@dimen/space_5"
            android:layout_weight="1"
            android:background="@drawable/trans_round_btn_selector"
            android:contentDescription="@string/iv_cont_des_string"
            android:gravity="center"
            android:text="@string/start_register"
            android:textColor="#FFD306"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>