<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg" >

    <include layout="@layout/main_title_bar"/>

    <LinearLayout
        android:id="@+id/register_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_bottom"
        android:layout_centerHorizontal="true"
        android:background="@drawable/trans_round_btn_selector"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/register_head_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/iv_cont_des_string"
            android:src="@drawable/register_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3"
            android:text="@string/register_head"
            android:textColor="#666666"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:layout_weight="1"
            android:background="@drawable/trans_round_btn_selector"
            android:gravity="center"
            android:hint="@string/register_username_hint"
            android:padding="@dimen/space_5"
            android:textColor="#666666"
            android:textSize="@dimen/text_size_15"
            android:inputType="text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>