<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <include layout="@layout/main_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginStart="@dimen/space_20"
            android:background="@drawable/trans_round_btn_selector"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/space_3"
                android:layout_marginStart="@dimen/space_3"
                android:background="@drawable/login_user_img"
                android:contentDescription="@string/iv_cont_des_string" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:padding="@dimen/space_5"
                android:textColor="#323232"
                android:textColorHint="#565656"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_10"
            android:background="@drawable/trans_round_btn_selector"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/space_3"
                android:layout_marginStart="@dimen/space_3"
                android:background="@drawable/login_pwd_img"
                android:contentDescription="@string/iv_cont_des_string" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/space_5"
                android:textColor="#323232"
                android:textColorHint="#565656"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/login_btn_selector"
            android:text="@string/start_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>