<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/main_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iv_mine_info_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_info_bg"
                android:contentDescription="@string/iv_cont_des_string" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_mine_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="123456789"
                    android:textColor="#333333"
                    android:textSize="@dimen/text_size_15"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_mine_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_3"
                    android:background="@drawable/mine_head_bg"
                    android:contentDescription="@string/iv_cont_des_string" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_option_my_talk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/option_mine_bg"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/mine_option_my_talk_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_5"
                android:layout_marginStart="@dimen/space_5"
                android:background="@drawable/option_my_talk"
                android:contentDescription="@string/iv_cont_des_string" />

            <TextView
                android:id="@+id/mine_option_my_talk_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/space_5"
                android:layout_toEndOf="@+id/mine_option_my_talk_img"
                android:layout_toRightOf="@+id/mine_option_my_talk_img"
                android:text="@string/mine_option_my_talk"
                android:textColor="@android:color/black"
                android:textSize="@dimen/option_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_5"
                android:layout_marginRight="@dimen/space_5"
                android:background="@drawable/widget_right_icon"
                android:contentDescription="@string/iv_cont_des_string" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="#e0e0e0" />

        <RelativeLayout
            android:id="@+id/mine_option_my_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/option_mine_bg"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/mine_option_my_question_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_5"
                android:layout_marginStart="@dimen/space_5"
                android:background="@drawable/option_my_question"
                android:contentDescription="@string/iv_cont_des_string" />

            <TextView
                android:id="@+id/mine_option_my_question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/space_5"
                android:layout_toEndOf="@+id/mine_option_my_question_img"
                android:layout_toRightOf="@+id/mine_option_my_question_img"
                android:text="@string/mine_option_my_question"
                android:textColor="@android:color/black"
                android:textSize="@dimen/option_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_5"
                android:layout_marginRight="@dimen/space_5"
                android:background="@drawable/widget_right_icon"
                android:contentDescription="@string/iv_cont_des_string" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="#e0e0e0" />

        <RelativeLayout
            android:id="@+id/mine_option_my_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/option_mine_bg"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/mine_option_my_answer_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_5"
                android:layout_marginStart="@dimen/space_5"
                android:background="@drawable/option_my_answer"
                android:contentDescription="@string/iv_cont_des_string" />

            <TextView
                android:id="@+id/mine_option_my_answer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/space_5"
                android:layout_toEndOf="@+id/mine_option_my_answer_img"
                android:layout_toRightOf="@+id/mine_option_my_answer_img"
                android:text="@string/mine_option_my_answer"
                android:textColor="@android:color/black"
                android:textSize="@dimen/option_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_5"
                android:layout_marginRight="@dimen/space_5"
                android:background="@drawable/widget_right_icon"
                android:contentDescription="@string/iv_cont_des_string" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="#e0e0e0" />

        <RelativeLayout
            android:id="@+id/mine_option_my_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/option_mine_bg"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/mine_option_my_comment_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_5"
                android:layout_marginStart="@dimen/space_5"
                android:background="@drawable/option_my_comment"
                android:contentDescription="@string/iv_cont_des_string" />

            <TextView
                android:id="@+id/mine_option_my_comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/space_5"
                android:layout_toEndOf="@+id/mine_option_my_comment_img"
                android:layout_toRightOf="@+id/mine_option_my_comment_img"
                android:text="@string/mine_option_my_comment"
                android:textColor="@android:color/black"
                android:textSize="@dimen/option_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_5"
                android:layout_marginRight="@dimen/space_5"
                android:background="@drawable/widget_right_icon"
                android:contentDescription="@string/iv_cont_des_string" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:background="#e0e0e0" />
    </LinearLayout>

</LinearLayout>